# Code-Island-CLI

./: .gitignore  LICENSE  README.md  aicli.bat  pyproject.toml  start.bat  temp_delete.txt
.github/workflows/: ci.yml
src/aicli/: __init__.py  chat.py  cli.py  config.py  history.py  tool_loop.py  tools.py  ui.py  utils.py
src/aicli/providers/: __init__.py  base.py  claude_provider.py  ollama_provider.py  openai_provider.py
tests/: test_config.py  test_providers.py
