[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aicli"
version = "0.1.0"
description = "A CLI tool for interacting with AI models like DeepSeek, OpenAI, Claude and local models"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
keywords = ["cli", "ai", "deepseek", "openai", "claude", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "click>=8.1.0",
    "httpx>=0.25.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    "pydantic>=2.0.0",
    "toml>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
aicli = "aicli.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/aicli"
Repository = "https://github.com/yourusername/aicli"
Issues = "https://github.com/yourusername/aicli/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/aicli"]

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
